@@ -2,6 +2,7 @@
 3332cf17f238807e51c42e8f77ef5f371bd00535e3fd565e60a740ba95a549e4  ChainTipper-1.0-beta2.zip
 3388fed10953ee9f8381ed0bca7797bd0e7c2303bf7551a2da291710c4137d42  ChainTipper-1.0-beta3.zip
 f353a58d7aba14d1a0f41c20b9fda08c3d89ce45ef89a74c3fb73e3305fabeaa  ChainTipper-1.0-beta4.zip
+93fcc419f320481c2dc0ea2c7fa5424da9ea25dba6088e9ad08440c68f5c0286  ChainTipper-1.0-beta5b.zip
 22066fde37f248cbf92ceb6728b40a7d22b72fedd641e343641293b10067748d  ChainTipper-1.0-beta5.zip
-270eca6a6a82d78b458bc864fb861faf15cb2f5af6b8fd1c3ba4e067466ed895  ChainTipper-1.0-beta6.zip
-2b46eb5e3f735552fa68c4891ba3e241888b64901a8ef9d492e71643e6f8aad6  ChainTipper-1.0beta6.zip
+29fcbefdd84cb4e0fdc9c492dab6d07e2c1a68c8fbd7917411371291ea620e44  ChainTipper-1.0-beta6test.zip
+93fbd386227ae2125c4fc11ccf328f70fb42ded1be40ea591d35e4b857edc152  ChainTipper-1.0-beta6.zip
